// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select_team/SelectTeam should match snapshot 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container"
    >
      <img
        className="signup-team-logo"
        src={null}
      />
      <SiteNameAndDescription
        siteName="Mattermost"
      />
      <div
        className="signup__content"
      >
        <h4>
          <FormattedMessage
            defaultMessage="Teams you can join: "
            id="signup_team.join_open"
            values={Object {}}
          />
        </h4>
        <div
          className="signup-team-all"
        >
          <SelectTeamItem
            key="team_team-a"
            loading={false}
            onTeamClick={[Function]}
            team={
              Object {
                "delete_at": 0,
                "display_name": "Team A",
                "id": "team_id_1",
                "name": "team-a",
              }
            }
          />
          <SelectTeamItem
            key="team_b-team"
            loading={false}
            onTeamClick={[Function]}
            team={
              Object {
                "delete_at": 0,
                "display_name": "B Team",
                "id": "team_id_2",
                "name": "b-team",
              }
            }
          />
        </div>
      </div>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/create_team"
          >
            <FormattedMessage
              defaultMessage="Create a new team"
              id="login.createTeam"
              values={Object {}}
            />
          </Link>
        </div>
        <div>
          <FormattedMessage
            defaultMessage="This option is only available for System Administrators, and does not show up for other users."
            id="login.createTeamAdminOnly"
            values={Object {}}
          />
        </div>
      </Connect(SystemPermissionGate)>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="margin--extra hidden-xs"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/admin_console"
          >
            <FormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
              values={Object {}}
            />
          </Link>
        </div>
      </Connect(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on error 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <BackButton
    onClick={[Function]}
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container"
    >
      <img
        className="signup-team-logo"
        src={null}
      />
      <SiteNameAndDescription
        siteName="Mattermost"
      />
      <div
        className="signup__content"
      >
        <div
          className="form-group has-error"
        >
          <label
            className="control-label"
          >
            error message
          </label>
        </div>
      </div>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/create_team"
          >
            <FormattedMessage
              defaultMessage="Create a new team"
              id="login.createTeam"
              values={Object {}}
            />
          </Link>
        </div>
        <div>
          <FormattedMessage
            defaultMessage="This option is only available for System Administrators, and does not show up for other users."
            id="login.createTeamAdminOnly"
            values={Object {}}
          />
        </div>
      </Connect(SystemPermissionGate)>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="margin--extra hidden-xs"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/admin_console"
          >
            <FormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
              values={Object {}}
            />
          </Link>
        </div>
      </Connect(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on loading 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container"
    >
      <img
        className="signup-team-logo"
        src={null}
      />
      <SiteNameAndDescription
        siteName="Mattermost"
      />
      <LoadingScreen
        position="relative"
        style={Object {}}
      />
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/create_team"
          >
            <FormattedMessage
              defaultMessage="Create a new team"
              id="login.createTeam"
              values={Object {}}
            />
          </Link>
        </div>
        <div>
          <FormattedMessage
            defaultMessage="This option is only available for System Administrators, and does not show up for other users."
            id="login.createTeamAdminOnly"
            values={Object {}}
          />
        </div>
      </Connect(SystemPermissionGate)>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="margin--extra hidden-xs"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/admin_console"
          >
            <FormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
              values={Object {}}
            />
          </Link>
        </div>
      </Connect(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team and is not system admin nor can create team 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container"
    >
      <img
        className="signup-team-logo"
        src={null}
      />
      <SiteNameAndDescription
        siteName="Mattermost"
      />
      <div
        className="signup__content"
      >
        <h4>
          <FormattedMessage
            defaultMessage="Teams you can join: "
            id="signup_team.join_open"
            values={Object {}}
          />
        </h4>
        <div
          className="signup-team-all"
        >
          <div
            className="signup-team-dir-err"
          >
            <div>
              <Connect(SystemPermissionGate)
                permissions={
                  Array [
                    "create_team",
                  ]
                }
              >
                <FormattedMessage
                  defaultMessage="No teams are available to join. Please create a new team or ask your administrator for an invite."
                  id="signup_team.no_open_teams_canCreate"
                  values={Object {}}
                />
              </Connect(SystemPermissionGate)>
              <Connect(SystemPermissionGate)
                invert={true}
                permissions={
                  Array [
                    "create_team",
                  ]
                }
              >
                <FormattedMessage
                  defaultMessage="No teams are available to join. Please ask your administrator for an invite."
                  id="signup_team.no_open_teams"
                  values={Object {}}
                />
              </Connect(SystemPermissionGate)>
            </div>
          </div>
        </div>
      </div>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/create_team"
          >
            <FormattedMessage
              defaultMessage="Create a new team"
              id="login.createTeam"
              values={Object {}}
            />
          </Link>
        </div>
      </Connect(SystemPermissionGate)>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="margin--extra hidden-xs"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/admin_console"
          >
            <FormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
              values={Object {}}
            />
          </Link>
        </div>
      </Connect(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team but can create team 1`] = `
<div>
  <Connect(AnnouncementBar) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="signup-team__container"
    >
      <img
        className="signup-team-logo"
        src={null}
      />
      <SiteNameAndDescription
        siteName="Mattermost"
      />
      <div
        className="signup__content"
      >
        <h4>
          <FormattedMessage
            defaultMessage="Teams you can join: "
            id="signup_team.join_open"
            values={Object {}}
          />
        </h4>
        <div
          className="signup-team-all"
        >
          <div
            className="signup-team-dir-err"
          >
            <div>
              <FormattedMessage
                defaultMessage="No teams are available to join. Please create a new team or ask your administrator for an invite."
                id="signup_team.no_open_teams_canCreate"
                values={Object {}}
              />
            </div>
          </div>
        </div>
      </div>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/create_team"
          >
            <FormattedMessage
              defaultMessage="Create a new team"
              id="login.createTeam"
              values={Object {}}
            />
          </Link>
        </div>
        <div>
          <FormattedMessage
            defaultMessage="This option is only available for System Administrators, and does not show up for other users."
            id="login.createTeamAdminOnly"
            values={Object {}}
          />
        </div>
      </Connect(SystemPermissionGate)>
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="margin--extra hidden-xs"
        >
          <Link
            className="signup-team-login"
            replace={false}
            to="/admin_console"
          >
            <FormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
              values={Object {}}
            />
          </Link>
        </div>
      </Connect(SystemPermissionGate)>
    </div>
  </div>
</div>
`;
